Mac video: Add blacklist entry for AVSampleBufferDisplayLayer

This leaks IOSurfaces on 10.9. Include 10.10 in the blacklist because it
has not been sufficiently tested.

BUG=632178
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2366433002
Cr-Commit-Position: refs/heads/master@{#420543}

Former-commit-id: f33642d15eb090f26cf37c40b04f2ba62a95e243