ui/accelerated_widget_mac/ca_layer_tree_coordinator.mm
@@ -11,15 +11,21 @@
 
 namespace ui {
 
-CALayerTreeCoordinator::CALayerTreeCoordinator(bool allow_remote_layers)
-    : allow_remote_layers_(allow_remote_layers) {
+CALayerTreeCoordinator::CALayerTreeCoordinator(
+    bool allow_remote_layers,
+    bool allow_av_sample_buffer_display_layer)
+    : allow_remote_layers_(allow_remote_layers),
+      allow_av_sample_buffer_display_layer_(
+          allow_av_sample_buffer_display_layer) {
   if (allow_remote_layers_) {
     root_ca_layer_.reset([[CALayer alloc] init]);
     [root_ca_layer_ setGeometryFlipped:YES];
     [root_ca_layer_ setOpaque:YES];
 
-    fullscreen_low_power_layer_.reset(
-        [[AVSampleBufferDisplayLayer alloc] init]);
+    if (allow_av_sample_buffer_display_layer_) {
+      fullscreen_low_power_layer_.reset(
+          [[AVSampleBufferDisplayLayer alloc] init]);
+    }
   }
 }
 
@@ -55,7 +61,8 @@ CARendererLayerTree* CALayerTreeCoordinator::GetPendingCARendererLayerTree() {
                    "specified, but not both.";
   }
   if (!pending_ca_renderer_layer_tree_)
-    pending_ca_renderer_layer_tree_.reset(new CARendererLayerTree);
+    pending_ca_renderer_layer_tree_.reset(
+        new CARendererLayerTree(allow_av_sample_buffer_display_layer_));
   return pending_ca_renderer_layer_tree_.get();
 }
 
